# fractol

./: .gitingnore  CMakeLists.txt  Makefile  color.py  fractol
colors/: color.txt  color1.txt  color2.txt  color4.txt  color5.txt  color6.txt
fractals/: bs.cl  buffalo.cl  celticheart.cl  celticmandelbrot.cl  fractol.hcl  julia.cl  mandelbar.cl  mandelbrot.cl  mandelbrotheart.cl
includes/: fractol.h  fractoldef.h
libft/: Makefile
libft/includes/: get_next_line.h  libft.h
libft/src/: ft_atoi_base.c  ft_bzero.c  ft_memdel.c  get_next_line.c
srcs/: args.c  hook.c  init.c  main.c  reader.c  render.c  utils.c
